fixed subtract and multiply method Commit #2
Added the multiply function in calculator application.

--- a/PROG8840_Calc/PROG8840_Calc.vcxproj
+++ b/PROG8840_Calc/PROG8840_Calc.vcxproj
@@ -131,6 +131,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>&lt;stdio.h&gt;</AdditionalIncludeDirectories>
+      <AdditionalUsingDirectories>#include &lt;stdio.h&gt;</AdditionalUsingDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
